--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -106,6 +106,7 @@
             
             <div class="flex flex-col sm:flex-row gap-3">
                 <button
+                  data-cy="add-to-wishlist-btn"
                   (click)="addToWishlist()"
                   [disabled]="loading"
                   class="flex-1 py-3 px-6 bg-white hover:bg-gray-50 text-gray-700 rounded-lg sm:rounded-xl font-semibold border-2 border-gray-200 hover:border-gray-300 transition-all duration-300 text-sm sm:text-base">
