--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
+<header class="w-full bg-black text-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2">
+    <p class="text-center text-xs sm:text-sm font-semibold tracking-wide">
+      ENVÍO GRATIS + RECIBE A TIEMPO PARA NAVIDAD (ÁREA METROPOLITANA)
+    </p>
+  </div>
+</header>
 <div class="relative w-full max-w-6xl mx-auto"> 
   <!-- Contenedor principal: posición relativa para poder ubicar botones absolutos dentro. 
        Centra el contenido horizontalmente y limita el ancho máximo del carrusel. -->
@@ -13,6 +20,7 @@
     [showControls]="indicators"
   >
   </app-carousel>
+
   <!-- Componente hijo del carrusel:
        - [autoPlay]: activa o desactiva la reproducción automática de slides.
        - [interval]: intervalo de cambio automático en milisegundos (3 segundos).
@@ -109,3 +117,39 @@
     }
   </button>
 </div>
+
+<div class="w-full py-8 bg-gray-50">
+  <p class="text-center text-lg sm:text-xl font-semibold tracking-wide text-gray-900">
+    Los mejores estilos de ésta temporada
+  </p>
+</div>
+
+<div class="w-full flex justify-center py-6">
+  <img
+    src="/images/bolsos para primavera tendencias.webp"
+    alt="Bolsos para primavera tendencias"
+    class="max-w-full h-auto"
+  />
+</div>
+<div class="w-full py-8 bg-gray-50">
+  <p class="text-center text-lg sm:text-xl font-semibold tracking-wide text-gray-900">
+    Encuentra el regalo perfecto para esta temporada
+  </p>
+</div>
+
+<div class="w-full flex justify-center py-6">
+  <img
+    src="/images/bolsos-tendencia.webp"
+    alt="Bolsos para primavera tendencias"
+    class="max-w-full h-auto"
+  />
+</div>
+
+<!-- footer -->
+<footer class="w-full bg-black text-white py-6 mt-12">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <p class="text-center text-sm sm:text-base">
+      &copy; 2024 Ecommerce App. Todos los derechos reservados.
+    </p>
+  </div>
+
