--- a/src/app/components/shippingAdress/shipping-form/shipping-form.component.html
+++ b/src/app/components/shippingAdress/shipping-form/shipping-form.component.html
@@ -47,7 +47,8 @@
     </div>
 
     <!-- CP, país, teléfono -->
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+      
       <app-form-field
         label="Código postal"
         fieldId="postalCode"
@@ -66,7 +67,7 @@
         [required]="true"
         [errorMessage]="getFieldError('country')"
         formControlName="country">
-      </app-form-field>
+      </app-form-field> 
 
       <app-form-field
         label="Teléfono de contacto"
