--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Layout: Sidebar + Content -->
-    <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
       
       <!-- Navigation Sidebar -->
       <nav class="lg:col-span-1">
@@ -64,7 +64,7 @@
 
       <!-- Content Area -->
       <main class="lg:col-span-3">
-        <div class="bg-white rounded-lg shadow-sm p-6 min-h-[500px]">
+        <div class="bg-white rounded-lg shadow-sm min-h-[500px]">
           <router-outlet></router-outlet>
         </div>
       </main>
